# slack-kb-agent

./: .dockerignore  .editorconfig  .env.development  .env.example  .env.example.auth  .env.example.llm  .env.example.rate_limits  .hadolint.yaml  .pre-commit-config.yaml  .releaserc.json  .secrets.baseline  .trivyignore  API_USAGE_GUIDE.md  ARCHITECTURE.md  AUTONOMOUS_EXECUTION_SUMMARY.md  AUTONOMOUS_RESEARCH_EXECUTION_COMPLETION.md  AUTONOMOUS_SDLC_COMPLETION_REPORT.md  AUTONOMOUS_SDLC_COMPLETION_REPORT_GENERATION_4.md  AUTONOMOUS_SDLC_COMPLETION_SUMMARY.md  AUTONOMOUS_SDLC_IMPLEMENTATION_SUMMARY.md  BACKLOG.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CODE_REVIEW.md  COMPREHENSIVE_API_DOCUMENTATION.md  CONTRIBUTING.md  CURRENT_ITERATION_BACKLOG.md  DEVELOPMENT_PLAN.md  Dockerfile  ENHANCED_AUTONOMOUS_SDLC_DEPLOYMENT_GUIDE.md  GENERATION_5_TRANSCENDENT_INTELLIGENCE_IMPLEMENTATION.md  Makefile  NOBEL_PRIZE_RESEARCH_PUBLICATION.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PROJECT_CHARTER.md  QUANTUM_SDLC_COMPLETION_REPORT.md  QUANTUM_SDLC_IMPLEMENTATION.md  README.md  REVOLUTIONARY_RESEARCH_PUBLICATION.md  (+76 more)
.devcontainer/: devcontainer.json  post-create.sh  post-start.sh  setup.sh
.github/: CODEOWNERS  SECURITY.md  dependabot.yml  project-metrics.json  pull_request_template.md  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.yml  security_issue.yml
.github/workflows/: cd.yml  ci.yml  release.yml  security.yml
DOCS/: backlog.yml
docs/: COMPLIANCE.md  DEVELOPMENT.md  OPERATIONAL_EXCELLENCE.md  ROADMAP.md  SDLC_ENHANCEMENT_SUMMARY.md  SETUP_REQUIRED.md
docs/adr/: ADR-001-database-selection.md  ADR-002-vector-search-implementation.md  ADR-003-llm-integration-strategy.md  ADR-004-caching-architecture.md  template.md
docs/automation/: README.md
docs/deployment/: README.md
docs/monitoring/: README.md
docs/runbooks/: incident-response.md
docs/status/: autonomous_cycle_2025-07-25.json  autonomous_cycle_2025-07-25.md  autonomous_cycle_2025-07-26.json  autonomous_cycle_2025-07-26.md  autonomous_cycle_2025-07-26_terry.json  autonomous_cycle_2025-07-26_terry.md  autonomous_cycle_2025-07-27_terry.json  autonomous_cycle_2025-07-27_terry.md  autonomous_cycle_2025-07-29_terry.json  autonomous_cycle_2025-07-29_terry.md  autonomous_cycle_2025-07-30_terry.json  autonomous_cycle_2025-07-30_terry.md  autonomous_cycle_2025-07-31_terry.json  autonomous_cycle_2025-07-31_terry.md
docs/testing/: README.md
docs/workflows/: CI_CD_SETUP.md  COMPREHENSIVE_CI_CD_SETUP.md  IMPLEMENTATION_READY.md  README.md  WORKFLOW_IMPLEMENTATION_GUIDE.md
migrations/: env.py
migrations/versions/: 0001_initial_schema.py
monitoring/: alert_rules.yml  alertmanager.yml  docker-compose.monitoring.yml  prometheus-enhanced.yml  prometheus.yml
scripts/: generate-sbom.py  metrics-collection.py  repository-maintenance.py
src/slack_kb_agent/: __init__.py  adaptive_learning_engine.py  advanced_algorithms.py  advanced_cache.py  analytics.py  (+89 more)
tests/: conftest.py  sprint_acceptance_criteria.json  test_advanced_algorithms.py  test_advanced_cache.py  test_advanced_nlp.py  test_advanced_security.py  test_api_server.py  test_auth_security.py  test_autonomous_sdlc.py  test_backup.py  test_bot_startup.py  test_cache.py  test_cache_integration.py  test_cache_simple.py  test_cli.py  test_configuration.py  test_constants.py  test_content_curation.py  test_database.py  test_database_circuit_breaker.py  test_enhanced_circuit_breaker.py  test_enhanced_query_processor.py  test_error_handling_improvements.py  test_escalation_security_fix.py  test_exceptions.py  test_feedback_learning.py  test_file_encoding_improvement.py  test_foundational.py  test_http_integration_simple.py  test_index_size_management.py  test_indexed_search.py  test_ingestion.py  test_ingestion_circuit_breaker.py  test_input_validation.py  test_kb_persistence.py  test_knowledge_base.py  test_llm_circuit_breaker_integration.py  test_llm_integration.py  test_lru_memory_management.py  test_memory_management.py  (+22 more)
(+21 files in other folders)
