[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "slack_kb_agent"
version = "1.3.0"
dependencies = [
    "sentence-transformers>=2.2.0",
    "faiss-cpu>=1.7.0",
    "numpy>=1.21.0",
    "torch>=1.9.0",
    "slack-bolt>=1.14.0",
    "slack-sdk>=3.21.0",
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
    "markdown>=3.4.0",
    "gitpython>=3.1.0",
]

[project.scripts]
slack-kb-agent = "slack_kb_agent.cli:main"
requires-python = ">=3.8"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["slack_kb_agent"]
