[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "slack_kb_agent"
version = "1.7.2"
dependencies = [
    "sentence-transformers>=2.2.0",
    "faiss-cpu>=1.7.0",
    "numpy>=1.21.0",
    "torch>=1.9.0",
    "slack-bolt>=1.14.0",
    "slack-sdk>=3.21.0",
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
    "markdown>=3.4.0",
    "gitpython>=3.1.0",
    "psutil>=5.9.0",
    "redis>=4.5.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.12.0",
    "bcrypt>=4.0.0",
]

[project.optional-dependencies]
llm = [
    "openai>=1.0.0",
    "anthropic>=0.8.0"
]

[project.scripts]
slack-kb-agent = "slack_kb_agent.cli:main"
slack-kb-db = "slack_kb_agent.db_cli:main"
requires-python = ">=3.8"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["slack_kb_agent"]
